bad/assign_var_bool_string.example_compiler_output
ERROR
[1mbad/assign_var_bool_string.lat:5:4: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	x = "";
	  [1;32m^[m
